<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Khandroid Sample 1</string>
    <string name="global_btn_close">Close</string>
    <string name="global_not_available">n/a</string>
    
    <string name="dlg__no_inet_msg">No connection to Intenet.</string>
    
    <string name="act__main__btn_activity">Activity demos</string>
    <string name="act__main__btn_fragment">Fragment demos</string>
    
    
    
    <string name="btn_execute_request">Execute HTTP request</string>
    <string name="btn_execute_rest">Execute REST request</string>
    <string name="btn_set_cookie">Set cookie and execute</string>
    <string name="demos__btn_simple_http">Simple HTTP request</string>
    <string name="demos__btn_cookie_http">HTTP request with cookie(s)</string>
    <string name="demos__btn_rest_http">HTTP REST request</string>
    <string name="cookie_http_demo__tv_cookie">Cookie value: %s</string>
    <string name="rest_http_demo__tv_result_string">REST result string value: %s</string>
    <string name="rest_http_demo__tv_result_int">REST result int value: %s</string>
    <string name="demos__btn_set_session_var">Set session variable</string>
    <string name="demos__btn_start_second_act">Start second activity</string>
    <string name="demos__session_var_value">Session variable value: %s</string>
    <string name="demos__btn_session_http">Session</string>
    <string name="btn_set_session_var">Set session var</string>
    <string name="btn_get_session_var">Get session var</string>
    <string name="btn_start">Start task</string>
    <string name="demos__btn_wait_indicator">Task with wait indicator</string>
    <string name="demos__btn_progress_indicator">Task with progress indicator</string>
    <string name="demos__btn_new_rest">Volley REST</string>
</resources>