<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        <Button
            android:id="@+id/btn_http_simple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/demos__btn_simple_http" />
        <Button
            android:id="@+id/btn_http_cookie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/demos__btn_cookie_http" />
        <Button
            android:id="@+id/btn_http_rest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/demos__btn_rest_http" />
        <Button
            android:id="@+id/btn_http_session"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/demos__btn_session_http" />         
        <Button
            android:id="@+id/btn_wait_indicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/demos__btn_wait_indicator" />         
        <Button
            android:id="@+id/btn_progress_indicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/demos__btn_progress_indicator" />         
        <Button
            android:id="@+id/btn_new_rest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/demos__btn_new_rest" />         
    </LinearLayout>
</ScrollView>