<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
     <Button
        android:id="@+id/btn_execute_request"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_execute_rest"
         />

    <TextView
        android:id="@+id/tv_result_string"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rest_http_demo__tv_result_string" />
    <TextView
        android:id="@+id/tv_result_int"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rest_http_demo__tv_result_int" />
</LinearLayout>